# crypto

./: .gitignore  BACKLOG.md  BILAN_PROJET.md  CHANGELOG.md  CLAUDE.md  README.md  admin.html  admin.py  admin_config.json  ai_arbiter_scorecard.py  ai_cost.py  ai_doctrine.py  ai_entry_arbiter.py  ai_exit_arbiter.py  ai_exit_scorecard.py  ai_notify.py  alembic.ini  backfill_funding.py  backfill_net_bps.py  bilan.md  entry_judge.py  overfit_monitor.py  position_review.py  prophecy_scorecard.py  pyproject.toml  requirements.txt  start_bots.sh  supervisor.py
alfred/: CHANGELOG.md  __init__.py  __main__.py  alerts.py  analytics.py  attention.py  botinstance.py  bots.json  brokers.py  db.py  features.py  flow.py  hardstop.py  hl.py  market.py  models.py  persistence.py  rules.py  settings.py  signals.py  telegram.py
analysis/: __init__.py  alfred_heartbeat.py  backtest.py  backtest_1h.py  backtest_1h_fast.py  backtest_1h_fast2.py  backtest_8h_cycle.py  backtest_boost.py  backtest_carry_pure.py  backtest_decorr.py  backtest_deep_s8.py  backtest_explore2.py  backtest_explore2b.py  backtest_explore2c.py  backtest_explore3.py  backtest_funding.py  backtest_genetic_deep.py  backtest_genetic_final.py  backtest_gp.py  backtest_newcombos.py  backtest_oi_filter.py  backtest_oi_filter2.py  backtest_optimize.py  backtest_pairs.py  backtest_premium.py  backtest_regime.py  backtest_reversal_v2.py  backtest_robustness.py  backtest_s10_pocket.py  backtest_sector.py  backtest_sessions.py  backtest_short_search.py  backtest_short_search2.py  backtest_signal_boost.py  backtest_signal_boost2.py  (+53 more)
(+396 files in other folders)
