[project]
name = "crypto-collector"
version = "1.0.0"
description = "Crypto microstructure data collector + web dashboard"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "asyncpg>=0.30.0",
    "orjson>=3.10",
    "aiohttp>=3.10",
    "psutil>=6.0",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "alembic>=1.14",
    "python-dotenv>=1.0",
]

[project.scripts]
collector = "src.collector.main:main"
dashboard = "src.dashboard.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
